# rust-oauth2-provider

./: .env  .gitignore  .log4rs.yml  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE2  LICENSE-MIT  README.md  TODO.md  config.example.toml  log4rs.yml  rustfmt.toml
extras/: schema.sql  test-clients.sql  wrk-token.lua
migrations/20170415220958_initial_schema/: down.sql  up.sql
src/: generate-client.rs  main.rs  models.rs  persistence.rs  routes.rs
src/handlers/: introspect.rs  mod.rs  token.rs
src/models/: authorization_token.rs  configuration.rs  db.rs  mod.rs  requests.rs  responses.rs
src/models/requests/: access_token.rs  introspect.rs  mod.rs
src/models/responses/: access_token.rs  introspection_err.rs  introspection_ok.rs  mod.rs  oauth2_error.rs
src/persistence/: mod.rs
src/routes/: mod.rs
src/test/: mod.rs
src/utils/: mod.rs  rocket_extras.rs  token.rs
src/web/: headers.rs  middleware.rs  mod.rs  routes.rs  utils.rs
src/web/handlers/: introspect.rs  mod.rs  token.rs
src/web/headers/: authorization_token.rs  mod.rs
